Todo Manger using HTML & CSS

--- a/public/todos.html
+++ b/public/todos.html
@@ -14,8 +14,7 @@
         <article>
             <h1 class="TodoPage-title">My Todo-list</h1>
             <section class="AddTodo">
-                <input class="AddTodo-text" type="text" placeholder="What's
-                        next?">
+                <input class="AddTodo-text" type="text" placeholder="What's next?">
                 <input class="AddTodo-date" type="date">
                 <input class="AddTodo-button" type="button" value="Add">
             </section>
