Updated database migrations

--- a/public/todos1.html
+++ b/public/todos1.html
@@ -32,6 +32,7 @@
                             <a class="TodoItem-delete" href="javascript:void(0)">
                                 <img src="trashcan.svg">
                             </a>
+                        </label>
                     </li>
                 </ul>
                 <ul>
@@ -42,6 +43,7 @@
                             <a class="TodoItem-delete" href="javascript:void(0)">
                                 <img src="trashcan.svg">
                             </a>
+                        </label>
                     </li>
                 </ul>
             </section>
@@ -58,6 +60,7 @@
                             <a class="TodoItem-delete" href="javascript:void(0)">
                                 <img src="trashcan.svg">
                             </a>
+                        </label>
                     </li>
                 </ul>
             </section>
@@ -71,6 +74,7 @@
                         <label class="TodoItem-Container">
                             <input class="TodoItem-checkbox" type="checkbox">
                             Type something Jan 21
+                        </label>
                     </li>
                 </ul>
                 <ul>
@@ -78,6 +82,7 @@
                         <label class="TodoItem-Container">
                             <input class="TodoItem-checkbox" type="checkbox">
                             Type something Jan 21
+                        </label>
                     </li>
                 </ul>
                 <ul>
@@ -85,6 +90,7 @@
                         <label class="TodoItem-Container">
                             <input class="TodoItem-checkbox" type="checkbox">
                             Type something Jan 21
+                        </label>
                     </li>
                 </ul>
         </article>
