--- a/public/todos1.html
+++ b/public/todos1.html
@@ -13,11 +13,11 @@
     <main class="TodoPageMain">
         <article>
             <h1 class="TodoPage-title">My Todo-list</h1>
-            <section class="AddTodo">
+            <form class="AddTodo" action="/todos" method="POST">
                 <input class="AddTodo-text" type="text" placeholder="What's next?">
                 <input class="AddTodo-date" type="date">
                 <input class="AddTodo-button" type="button" value="Add">
-            </section>
+            </form>
             <section class="TodoSection">
                 <div class="TodoSectionTitle">
                     <p class="TodoSectionTitle-text">Due Today</p>
